[workspace]
members = [
    "aoc2018",
    "example-day",
    "day1-1",
    "day1-2",
    "day2-1",
    "day2-2",
    "day3-1",
    "day3-2",
    "day4-1",
    "day4-2",
    "day5-1",
    "day5-2",
    "day6",
    "day7",
    "day8",
    "day9",
    "day10",
    "day11",
    "day12",
    "day13",
    "day14",
    "day15",
    "day16",
    "day18",
]

