[package]
name = "day15"
version = "0.1.0"
authors = ["Mikael Zayenz Lagerkvist <zayenz@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.3"
strum = "0.11.0"
strum_macros = "0.11.0"
rayon = "1"
aoc2018 = { path = "../aoc2018"}
hashbrown = "0.1.6"
itertools = "0.8.0"
tap = "0.3.0"
structopt = "0.2.13"
streaming-stats = "0.2.2"


[dev-dependencies]
assert_cli = "0.5"
